# GOIT_WEB_hw10-13

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  start-web.sh
core/: settings.py  urls.py
notes/media/: default_avatar.png:Zone.Identifier
notes/noteapp/: forms.py  models.py  urls.py  views.py
notes/noteapp/migrations/: 0001_initial.py  0002_note_user_tag_user_tag_tag_of_username.py
notes/noteapp/temolates/nateapp/: index.html
notes/noteapp/templates/noteapp/: index.html
notes/noteapp/templatetags/: extract_tags.py
notes/notes/: settings.py  urls.py
notes/users/: forms.py  signals.py  urls.py  views.py
notes/users/migrations/: 0001_initial.py
quotes/: migrate_script.py
quotes/mongoDB/: connection.py  migrate.py  models.py
quotes/quotes/: settings.py  urls.py
quotes/quotesapp/: forms.py  models.py  tests.py  urls.py  utils.py  views.py
quotes/quotesapp/migrations/: 0001_initial.py  0002_author_user_quote_user_alter_author_fullname.py  0003_tag_user_tag_tag_of_username.py  0004_alter_author_born_location_alter_author_fullname.py  0005_alter_tag_name.py  0006_alter_quote_tags.py
quotes/quotesapp/templates/quotesapp/: 404.html  author.html  author_detail.html  index.html  quote.html  quote_detail.html
quotes/quotesapp/templatetags/: extract_tags.py  filter_tags.py
quotes/static/quotesapp/css/: style.css
quotes/users/: forms.py  urls.py  views.py
quotes/users/templates/users/: login.html  password_reset_email.html  password_reset_subject.txt
test_app/: urls.py  views.py
