[tool.poetry]
name = "hw_django"
version = "0.1.0"
description = ""
authors = ["C-Hurtmann <constantine2903@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.1"
psycopg2-binary = "^2.9.6"
pillow = "^9.5.0"
mongoengine = "^0.27.0"
django-environ = "^0.10.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
